# flutter_usbcamera

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/libausbc/: build.gradle  consumer-rules.pro
android/libausbc/src/main/java/com/jiangdg/ausbc/widget/: PreviewImageView.kt
android/libnative/: build.gradle  consumer-rules.pro
android/libnative/src/main/cpp/: CMakeLists.txt
android/libuvc/: build.gradle  consumer-rules.pro
android/libuvc/src/main/java/com/jiangdg/usb/: USBMonitor.java
android/libuvc/src/main/jni/: Application.mk
android/libuvc/src/main/jni/libjpeg-turbo-1.5.0/: Android.mk
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/jiangdg/flutter_usbcamera/: FlutterUsbcameraPlugin.kt
android/src/test/kotlin/com/jiangdg/flutter_usbcamera/: FlutterUsbcameraPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: flutter_usbcamera.dart  flutter_usbcamera_method_channel.dart  flutter_usbcamera_platform_interface.dart
lib/src/: models.dart  multi_camera_controller.dart  usb_camera_controller.dart  usb_camera_preview.dart
test/: flutter_usbcamera_test.dart
(+1 files in other folders)
